Fixed failure handling subscribing to streams